# VATAligner

./: CMakeLists.txt  README.md  chaining.py  run_prot.sh
VAT_Project/: CMakeLists.txt
VAT_Project/data/: MT.fa  Pfam.fa  astral-scopedom-seqres-gd-sel-gs-e100m-e-0,3-2.07.fa  convert.py  q2.fa  query.fa  ref.fa  t2.fa  testq.fa  testr.fa  tmp.md
VAT_Project/scripts/: Benchmark_DIAMOND_Duplex.pl  gruth_extract_sam.py  gruth_extract_sam_sim.py  reverse.py  spliced_benchmark.py
VAT_Project/src/: README  README.md  VATMain.cpp  main.cpp  readme  test  test.cpp
VAT_Project/src/align/: AlignQueries.h  AlignRead.h  AlignReads.h  AlignSequence.h  Align_fectcher.h  FindSeedsChain.h  LinkSegments.h  MatchFunc.h  align_queries.h  align_read.h  align_sequence.h  align_sequence_.h  chaining  chaining.h  dp_chain_chimera.h  findwholeGenoSeeds.h  gappedSeed.h  hsp_traits.h  link_segments.h  log  match.h  match_func.h  pairChimera.h  queriesAlign.h  splicedSeed.h  splicedunGappedSeed.h  testchaining.cpp  tmp.h  ungappedSeed.h  ungappedSeeds.h
VAT_Project/src/alignment/: AlignReads.h  FindSeedsChain.h  ObtainSeeds.h  PairChimera.h  chaining  gappedAlignment.h  link_segments.h  log  queriesAlign.h  testchaining.cpp  tmp.h
VAT_Project/src/basic/: BaseMatrix.h  BioAlphabet.h  ContextSet.h  DiagonalSeeds.h  DiagonalSegment.h  EditTranscript.h  Hits.h  Matrixs.h  Minimizer.h  NuclScoreMatrix.h  PackedLocations.h  PackedSequence.h  ProteinProfile.h  ReducedAlpha.h  ScoreMatrix.h  ScoreMatrix_.h  Seed.h  SeedPartition.h  SequenceType.h  Shape.h  ShapeParameter.h  Statistics.h  Translator.h  VATConsts.h  VATParameter.h  VATParameters.cpp  VATParameters.h  alignment_scoring.h  edit_transcript.h  exceptions.h  interval.h  match.h  options.cpp  options.h  packed_loc.h  packed_sequence.h  reduction.h  score_matrix.h  (+10 more)
(+386 files in other folders)
